# experienced

./: .env.example  .gitignore  .prettierignore  .prettierrc  CNAME  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE.txt  README.md  README.txt  SELFHOSTING.md  STRUCTURE.md  compose.yaml  database.mysql  docker-compose.yml  package-lock.json  package.json  prepare.sh  rustfmt.toml  scrape6.py  sqlx-data.json
.cargo/: config.toml
.github/: FUNDING.yml  dependabot.yml
.sqlx/: query-0071056120c75aac7d8679acd0577dfb84c367700269036c9e9822884d21a750.json  query-0144205ffaf5527a1c219de6dace5410b45bda629ff42735e6162463b07dd032.json  query-020c2a2997133efbe04da2dbd2d7614bfa3a2e372f7afbc02449e27460794c32.json  query-03268675aaf34706fd6f47ea6e8fdaed6f1d51217d0d6c618d6fb7b8b0d03d45.json  query-0b0ec308b3ae11adf184a5815ff862408bfeb6e7ac474e948729bcf201e4e04d.json  query-0b8b92a871c28dbd866a4b433d6c8d1ca88fd052534e0c2b6d43b1d43e390df3.json  query-0d857242112b9512301a40bb8c825995f153f8c41d3f1637e73f629c62bd30b2.json  query-101993ac7432b8bfeed33cb6fb914c4798bec16e2526441f1e565e2bbc2fd1db.json  query-1427c6de6a7ff0e6dfb3eced189361a28e5284ead2aa878fe0176dc41dc8546a.json  query-16671f8ef55be62ef1c859921b8b50ec59ea466e0ff904ef1618c481da8a32fd.json  query-195f50e0e3d8468bc70d7d179056b018082719f3e311990eebe8d5db30ddfda4.json  query-197f9be1a027b284f8bd920b6c463e422ad74f8f450173ab97be52a7be671535.json  query-1d74af0b2f76f2324068f29697150c083bfaf2d9cee3b6386f100cc1e5367b9f.json  query-1de09f7e51dbf2dc4f4236b23ddb416a7778d77f9a60954b257179d9596ce311.json  query-2101256b76ec5a58cb75d98cabd30e9f3366011585a7ff47e84ee97b3374c1c7.json  query-21852dc3f8e13e61f2b3ce8dbc0856dd4cebc69251b711f22f4723b97a816f14.json  query-2253a02f621aa0735be44f9072e7d86e2c6d2d626a699ce35530e01aea54e6a4.json  query-24448a200ed57ecbd5f496db16602f4ce4e6add73749e1d76dd0732ecc2b9d6c.json  query-275791c2a4c08c1ac2d5a56cbb33d046d49d5a9d13c8960dc26c2ba818be3c7a.json  query-2789a4214d7f7b16be1cf8b429e137fc676688ce0359ea70effa283c11ed990f.json  query-2a248d63ad403c71f66295461744aaf1b3f50a4a43c7f8138e66b5e00938d980.json  query-2f5c8a5e98cc21590c149f7b8ba03a8a5de5a6248004d8c1fc01c475b2711516.json  query-391dddb21dd6cb6c94d9716c97c17f2ac2a2c5ecfa0961158fb66ad2e29acbee.json  query-40a13a485c85a96d8fcbb52bfb9fd19d25100fc0fa8c83497945ef141c306a6d.json  query-435c80a692de76440144e87edfc626c44443a4ac4f8076a41f7ce18cb6555f70.json  query-4579f46508cd1c394135db669b306c24f7c42acd1093fe91252a75ea4924f78b.json  query-45a5d29352d68fa2118006e5735c15de24f6d4f55d48eab66203c6bfc86403d1.json  query-486844c54c1440ab6ce114e059a81e8d32b574d2aac2936076632b9c5d70dd96.json  query-49627aa02d870d3b2f19809a10f59c653f28e889469f489d9b3e4864c8bf3474.json  query-4bcb94ba7053b48b95dd5c4035792e3b4424986e2a3e1b4f9bb7164ff42c8fb9.json  query-4ff440df5c5b5f337cce0a8234af4813ee8ce55c8c0debc76b4276347fda1eda.json  (+64 more)
ci/: get-tag.sh  lint.sh  prepare.sh
libmee6/: Cargo.toml
libmee6/src/: lib.rs
listener/: Cargo.toml  Dockerfile  fly.toml
listener/src/: main.rs  message.rs  user_cache.rs
mee6/: Cargo.toml  README.txt
mee6/src/: lib.rs
simpleinterpolation/: Cargo.toml  README.md
simpleinterpolation/benches/: all_interpolation.rs  no_interpolation.rs  simple_interpolation.rs  very_long_uninterpolated.txt
simpleinterpolation/src/: lib.rs
slash/: Cargo.toml  Dockerfile  fly.toml
slash/src/: cmd_defs.rs  colors.rs  discord_sig_validation.rs  error.rs  handler.rs  help.rs  levels.rs  main.rs  manage_card.rs  manage_colors.rs  manager.rs  mee6_worker.rs  processor.rs  render_card.rs  toy.rs
slash/src/cmd_defs/: card.rs  manage.rs  mod.rs
slash/src/resources/icons/: LICENSE.txt
slash/src/resources/icons/valkyrie_pilot/: airplane.ase
web/: Cargo.toml  Dockerfile  fly.toml
web/src/: homepage.css  homepage.html  index.html  leaderboard.html  main.css  main.rs  privacy.html  terms.html
xpd-cleanup/: Cargo.toml  Dockerfile
xpd-cleanup/src/: main.rs
xpd-common/: Cargo.toml  Dockerfile  README.txt  build.rs
xpd-common/src/: lib.rs
xpd-database/: Cargo.toml
xpd-database/src/: acq_wrapper.rs  lib.rs  test.rs  util.rs
xpd-gateway/: Cargo.toml  Dockerfile
xpd-gateway/src/: main.rs
xpd-listener/: Cargo.toml  Dockerfile  fly.toml
xpd-listener/src/: audit_log.rs  lib.rs  main.rs  message.rs  user_cache.rs
xpd-lite/: Cargo.toml
xpd-lite/src/: main.rs
xpd-permission-cache/: Cargo.toml
xpd-permission-cache/src/: lib.rs
xpd-rank-card/: Cargo.toml  README.md
xpd-rank-card/src/: cards.rs  colors.rs  config.rs  customizations.rs  font.rs  lib.rs  toy.rs
xpd-rank-card/src/resources/icons/valkyrie_pilot/: LICENSE
xpd-setcommands/: Cargo.toml  Dockerfile
xpd-setcommands/src/: main.rs
xpd-slash/: Cargo.toml  Dockerfile  fly.toml
xpd-slash/src/: admin.rs  audit.rs  autocomplete.rs  colors.rs  config.rs  dispatch.rs  error.rs  experience.rs  gdpr.rs  handler.rs  help.rs  leaderboard.rs  levels.rs  lib.rs  main.rs  manage_card.rs  manager.rs  mee6_worker.rs  processor.rs  response.rs  rewards.rs  toy.rs
xpd-slash/src/cmd_defs/: admin.rs  card.rs  config.rs  experience.rs  gdpr.rs  manage.rs  mod.rs  rewards.rs
xpd-web/: Cargo.toml  Dockerfile  README.md  astro.config.mjs  config.main.toml  config.prod.toml  config.toml  fly.toml  package.json
xpd-web/content/: 404.md  _index.md
xpd-web/content/privacy/: _index.md
xpd-web/content/terms/: _index.md
xpd-web/public/: _redirects  robots.txt  sitemap.txt
xpd-web/src/: error.rs  files.rs  leaderboard.html  leaderboard.rs  main.rs  privacy.html  terms.html
xpd-web/src/components/: Footer.astro  LinkButton.astro  Navbar.astro  TinySpacer.astro  Wordmark.astro
xpd-web/src/layouts/: Docs.astro  Layout.astro
xpd-web/src/pages/: 404.astro  docs.md  empty.md  index.astro  leaderboards.md  privacy.md  terms.md
xpd-web/src/resources/: 404.html  5xx.html  base.html  index.html  leaderboard.html  main.css  privacy.html  sitemap.txt  terms.html
xpd-web/static/: main.css
xpd-web/templates/: 404.html  5xx.html  base.html  index.html  leaderboard.html  privacy.html  robots.txt  terms.html
(+46 files in other folders)
