[workspace]
members = [
    "mee6",
    "simpleinterpolation",
    "xpd-slash",
    "xpd-listener",
    "xpd-gateway",
    "xpd-common",
    "xpd-rank-card",
    "xpd-database",
    "xpd-util",
    "xpd-cleanup",
    "xpd-slash-defs",
    "xpd-setcommands"
]
resolver = "2"

[workspace.dependencies]
mee6 = { path = "mee6" }
simpleinterpolation = { path = "simpleinterpolation" }
xpd-slash = { path = "xpd-slash" }
xpd-listener = { path = "xpd-listener" }
xpd-gateway = { path = "xpd-gateway" }
xpd-common = { path = "xpd-common" }
xpd-rank-card = { path = "xpd-rank-card" }
xpd-database = { path = "xpd-database" }
xpd-util = { path = "xpd-util" }
xpd-slash-defs = { path = "xpd-slash-defs" }
