[package]
name = "experienced-listener"
version = "0.1.0"
edition = "2021"
authors = ["valkyrie_pilot <valk@randomairborne.dev>"]
description = "A websocket listener for experienced"
repository = "https://github.com/randomairborne/experienced"
readme = "README.txt"
license = "MS-PL"
categories = ["games"]
keywords = ["discord-bot", "mee6"]

[dependencies]
futures = "0.3"
rand = "0.8"
redis = { version = "0.22", features = ["aio", "tokio-comp", "connection-manager"] }
dotenvy = "0.15"
twilight-model = "0.14"
twilight-http = "0.14"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
twilight-gateway = { version = "0.14", features = ["rustls-native-roots"], default-features = false }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "tls", "postgres", "macros", "offline"] }
mee6 = "0.0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
