[package]
name = "experienced-listener"
version = "0.1.0"
edition = "2021"
authors = ["valkyrie_pilot <valk@randomairborne.dev>"]
description = "A websocket listener for experienced"
repository = "https://github.com/randomairborne/experienced"
readme = "README.txt"
license = "MS-PL"
categories = ["games"]
keywords = ["discord-bot", "mee6"]

[dependencies]
futures = "0.3"
rand = "0.8"
deadpool-redis = { version = "0.11", features = ["rt_tokio_1"] }
redis = { version = "0.22", default-features = false, features = ["aio"] }
dotenvy = "0.15"
twilight-model = "0.15"
twilight-http = "0.15"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
twilight-gateway = { version = "0.15", features = ["rustls-native-roots", "twilight-http"], default-features = false }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "tls", "postgres", "macros", "offline"] }
mee6 = "0.1"
serde_json = "1"
thiserror = "1"
