[package]
name = "mee6"
version = "0.0.1"
edition = "2021"
authors = ["valkyrie_pilot <valk@randomairborne.dev>"]
description = "A library to calculate mee6 leveling data"
license = "MIT OR Apache-2.0"
readme = "README.txt"
repository = "https://github.com/randomairborne/anvil"
categories = ["no-std", "mathematics"]
keywords = ["mee6"]

[dependencies]
