[package]
name = "mee6"
version = "0.1.0"
edition = "2024"
authors = ["valkyrie_pilot <valk@randomairborne.dev>"]
description = "A library to calculate mee6 leveling data"
license = "MIT OR Apache-2.0"
readme = "README.txt"
repository = "https://github.com/randomairborne/experienced"
categories = ["no-std", "mathematics"]
keywords = ["mee6"]
documentation = "https://docs.rs/mee6"


[dependencies]
