[package]
name = "simpleinterpolation"
version = "0.2.0"
edition = "2021"
authors = ["valkyrie_pilot <valk@randomairborne.dev>"]
description = "Dead simple string interpolation"
keywords = ["interpolation", "templating", "format"]
categories = ["template-engine"]
repository = "https://github.com/randomairborne/experienced"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "no_interpolation"
harness = false

[[bench]]
name = "all_interpolation"
harness = false


[[bench]]
name = "simple_interpolation"
harness = false
