[package]
name = "experienced-slash"
version = "0.1.0"
edition = "2021"
description = "A slash command handler for experienced"
repository = "https://github.com/randomairborne/experienced"
readme = "README.txt"
license = "MS-PL"
categories = ["games"]
keywords = ["discord-bot", "mee6"]

# SO MANY DEPENDENCIES

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "tls", "postgres", "macros", "offline"] }
serde = { version = "1", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls-native-roots"], default-features = false }
redis = { version = "0.22", features = ["aio", "tokio-comp", "connection-manager"] }
twilight-http = { version = "0.15", features = ["rustls-native-roots"], default-features = false }
twilight-util = { version = "0.15", features = ["builder"] }
twilight-interactions = "0.15"
twilight-validate = "0.15"
twilight-model = "0.15"
xpd-rank-card = { path = "../xpd-rank-card/", version = "0.0.2" }
tracing = "0.1"
axum = "0.6"
serde_json = "1"
ed25519-dalek = "1"
hex = "0.4"
thiserror = "1"
dotenvy = "0.15"
mee6 = "0.1"
csv = "1.2"
base64 = "0.21"


[dev-dependencies]
rand = "0.8"
cargo_metadata = "0.15"
