[package]
name = "experienced-slash"
version = "0.1.0"
edition = "2021"
description = "A slash command handler for experienced"
repository = "https://github.com/randomairborne/experienced"
readme = "README.txt"
license = "MS-PL"
categories = ["games"]
keywords = ["discord-bot", "mee6"]

# SO MANY DEPENDENCIES

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls-native-roots"], default-features = false }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "tls", "postgres", "macros", "offline"] }
twilight-http = { version = "0.15", features = ["rustls-native-roots"], default-features = false }
redis = { version = "0.23", features = ["aio", "tokio-comp", "connection-manager"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
xpd-rank-card = { path = "../xpd-rank-card/", version = "0.2" }
twilight-util = { version = "0.15", features = ["builder"] }
serde = { version = "1", features = ["derive"] }
twilight-interactions = "0.15"
twilight-validate = "0.15"
twilight-model = "0.15"
parking_lot = "0.12.1"
ed25519-dalek = "1"
serde_json = "1"
dotenvy = "0.15"
tracing = "0.1"
base64 = "0.21"
thiserror = "1"
axum = "0.6"
mee6 = "0.1"
hex = "0.4"


[dev-dependencies]
rand = "0.8"
cargo_metadata = "0.15"
