[package]
name = "experienced-web"
version = "0.1.0"
edition = "2021"
description = "A web dashboard for experienced"
repository = "https://github.com/randomairborne/experienced"
readme = "README.txt"
license = "MS-PL"
categories = ["games"]
keywords = ["discord-bot", "mee6"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "macros", "offline"] }
serde = { version = "1", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
twilight-http = { version = "0.14", features = ["rustls-native-roots"], default-features = false }
axum = { version = "0.6", features = ["tokio"], default-features = false }
thiserror = "1"
dotenvy = "0.15"
mee6 = "0.0.3"
tera = "1"