[package]
name = "xpd-common"
version = "0.0.6"
edition = "2021"
description = "Common structures for the experienced discord bot"
repository = "https://github.com/randomairborne/experienced"
license = "EUPL-1.2"
readme = "README.txt"
categories = ["games"]
keywords = ["discord-bot", "mee6"]

[dependencies]
# twilight
twilight-gateway = { version = "0.16.0-rc.1", default-features = false }
twilight-cache-inmemory = "0.16.0-rc.1"
twilight-model = "0.16.0-rc.1"

# internal
simpleinterpolation = { workspace = true }

[build-dependencies]
git2 = "0.19"