[package]
name = "xpd-common"
version = "0.0.6"
edition = "2021"
description = "Common structures for the experienced discord bot"
repository = "https://github.com/randomairborne/experienced"
license = "EUPL-1.2"
readme = "README.txt"
categories = ["games"]
keywords = ["discord-bot", "mee6"]

[dependencies]
# twilight
twilight-gateway = { version = "0.16", default-features = false }
twilight-cache-inmemory = "0.16"
twilight-model = "0.16"

serde = { version = "1", features = ["derive"] }

# internal
simpleinterpolation = { workspace = true }