[package]
name = "xpd-common"
version = "0.0.6"
edition = "2024"
description = "Common structures for the experienced discord bot"
repository = "https://github.com/randomairborne/experienced"
license = "EUPL-1.2"
readme = "README.txt"
categories = ["games"]
keywords = ["discord-bot", "mee6"]
build = "build.rs"

[dependencies]
# twilight
twilight-gateway = { version = "0.16", default-features = false }
twilight-cache-inmemory = "0.16"
twilight-model = "0.16"

# serialize / deserialize
serde = { version = "1", features = ["derive"] }
serde_repr = "0.1"

# convert enums to numbers
strum = "0.27"
strum_macros = "0.27"

# internal
simpleinterpolation = { workspace = true }