[package]
name = "xpd-database"
version = "0.1.0"
edition = "2024"

[dependencies]
# misc
sqlx = { version = "0.8", features = ["postgres", "tls-rustls", "runtime-tokio"] }
twilight-model = "0.16"
tokio-stream = "0.1"
tracing = "0.1"
futures-core = "0.3"

# internal
simpleinterpolation = { workspace = true }
xpd-common = { workspace = true }


