[package]
name = "xpd-gateway"
version = "0.1.0"
edition = "2021"
authors = ["valkyrie_pilot <valk@randomairborne.dev>"]
description = "experienced in one container"
repository = "https://github.com/randomairborne/experienced"
license = "EUPL-1.2"
categories = ["games"]
keywords = ["discord-bot", "mee6"]
build = "build.rs"

[dependencies]
twilight-gateway = { version = "0.16.0-rc.1", features = ["rustls-native-roots", "twilight-http", "zlib-stock"], default-features = false }
reqwest = { version = "0.12", features = ["json", "rustls-tls-native-roots", "hickory-dns"], default-features = false }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing-subscriber = { version = "0.3", features = ["json"] }
tokio-util = { version = "0.7", features = ["rt"] }
twilight-cache-inmemory = "0.16.0-rc.1"
xpd-database = { workspace = true }
xpd-listener = { workspace = true }
xpd-common = { workspace = true }
xpd-slash = { workspace = true }
twilight-validate = "0.16.0-rc.1"
twilight-model = "0.16.0-rc.1"
twilight-http = "0.16.0-rc.1"
thiserror = "1"
tracing = "0.1"
vss = "0.1"