[package]
name = "xpd-gateway"
version = "0.1.0"
edition = "2021"
authors = ["valkyrie_pilot <valk@randomairborne.dev>"]
description = "experienced in one container"
repository = "https://github.com/randomairborne/experienced"
license = "EUPL-1.2"
categories = ["games"]
keywords = ["discord-bot", "mee6"]
build = "build.rs"

[dependencies]
# twilight
twilight-gateway = { version = "0.16.0-rc.1", features = ["rustls-native-roots", "twilight-http", "zlib-stock"], default-features = false }
twilight-cache-inmemory = "0.16.0-rc.1"
twilight-validate = "0.16.0-rc.1"
twilight-model = "0.16.0-rc.1"
twilight-http = "0.16.0-rc.1"

# datafetchers
reqwest = { version = "0.12", features = ["json", "rustls-tls-native-roots", "hickory-dns"], default-features = false }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "macros"] }

# tokio
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }

# tracing and logging
opentelemetry-otlp = { version = "0.26.0", features = ["reqwest-rustls-webpki-roots", "http-proto"] }
opentelemetry_sdk = { version = "0.26.0", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.26.0"
opentelemetry-appender-tracing = "0.26.0"
tracing-subscriber = "0.3"
opentelemetry = "0.27.1"
base64 = "0.22"

tracing = "0.1"
# xpd crates
xpd-database = { workspace = true }
xpd-listener = { workspace = true }
xpd-common = { workspace = true }
xpd-slash = { workspace = true }
xpd-util = { workspace = true }

# utilities
vss = "0.1"
thiserror = "2"
valk-utils = "0.1"
