[package]
name = "xpd-gateway"
version = "0.1.0"
edition = "2024"
authors = ["valkyrie_pilot <valk@randomairborne.dev>"]
description = "experienced in one container"
repository = "https://github.com/randomairborne/experienced"
license = "EUPL-1.2"
categories = ["games"]
keywords = ["discord-bot", "mee6"]
build = "build.rs"

[dependencies]
# twilight
twilight-gateway = { version = "0.17", features = ["rustls-native-roots", "twilight-http"], default-features = false }
twilight-http = { version = "0.17", features = ["hickory", "rustls-native-roots"] }
twilight-cache-inmemory = "0.17"
twilight-validate = "0.17"
twilight-model = "0.17"
rustls = "0.23"

# datafetchers
reqwest = { version = "0.12", features = ["json", "rustls-tls-native-roots", "hickory-dns"], default-features = false }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "macros"] }

# tokio
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }

# tracing and logging
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"

# xpd crates
xpd-database = { workspace = true }
xpd-listener = { workspace = true }
xpd-common = { workspace = true }
xpd-slash = { workspace = true }
xpd-util = { workspace = true }

# utilities
vss = "0.1"
thiserror = "2"
