[package]
name = "xpd-listener"
version = "0.1.0"
edition = "2021"
authors = ["valkyrie_pilot <valk@randomairborne.dev>"]
description = "A websocket listener for experienced"
repository = "https://github.com/randomairborne/experienced"
license = "EUPL-1.2"
categories = ["games"]
keywords = ["discord-bot", "mee6"]

[dependencies]
twilight-cache-inmemory = { version = "0.16.0-rc.1", features = ["permission-calculator"] }
twilight-gateway = { version = "0.16.0-rc.1", default-features = false }
tokio-util = { version = "0.7", features = ["rt"] }
simpleinterpolation = { workspace = true }
xpd-database = { workspace = true }
xpd-common = { workspace = true }
xpd-util = { workspace = true }
twilight-model = "0.16.0-rc.1"
twilight-http = "0.16.0-rc.1"
thiserror = "1"
tracing = "0.1"
ahash = "0.8"
rand = "0.8"
mee6 = "0.1"
