[package]
name = "xpd-listener"
version = "0.1.0"
edition = "2024"
authors = ["valkyrie_pilot <valk@randomairborne.dev>"]
description = "A websocket listener for experienced"
repository = "https://github.com/randomairborne/experienced"
license = "EUPL-1.2"
categories = ["games"]
keywords = ["discord-bot", "mee6"]

[dependencies]
twilight-http = { version = "0.16", features = ["hickory", "rustls-native-roots", "rustls-aws_lc_rs"] }
twilight-cache-inmemory = { version = "0.16", features = ["permission-calculator"] }
twilight-gateway = { version = "0.16", default-features = false }
twilight-model = "0.17"

# tokio
tokio-util = { version = "0.7", features = ["rt"] }

# error handling
tracing = "0.1"
thiserror = "2"

# xpd utils
simpleinterpolation = { workspace = true }
xpd-database = { workspace = true }
xpd-common = { workspace = true }
xpd-util = { workspace = true }
mee6 = "0.1"

# general utils
rand = "0.9"
dashmap = "6"
