[package]
name = "xpd-lite"
version = "0.1.0"
edition = "2021"
authors = ["valkyrie_pilot <valk@randomairborne.dev>"]
description = "experienced in one container"
repository = "https://github.com/randomairborne/experienced"
readme = "README.txt"
license = "MS-PL"
categories = ["games"]
keywords = ["discord-bot", "mee6"]

[dependencies]
xpd-listener = { path = "../xpd-listener" }
xpd-slash = { path = "../xpd-slash" }