[package]
name = "xpd-rank-card"
version = "0.5.3"
edition = "2021"
license = "EUPL-1.2"
description = "A library for experienced and minixpd to render SVGs"
repository = "https://github.com/randomairborne/experienced"
readme = "README.md"
keywords = ["svg"]
categories = ["multimedia::images"]

[dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["sync"] }
strum_macros = "0.26"
thiserror = "1"
tracing = "0.1"
resvg = "0.42"
strum = "0.26"
png = "0.17"
rayon = "1"
tera = "1"