[package]
name = "xpd-rank-card"
version = "0.6.0"
edition = "2021"
license = "EUPL-1.2"
description = "A library for experienced and minixpd to render SVGs"
repository = "https://github.com/randomairborne/experienced"
readme = "README.md"
keywords = ["svg"]
categories = ["multimedia::images"]

[dependencies]
tokio = { version = "1", features = ["sync", "fs"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tracing = "0.1"
resvg = "0.42"
png = "0.17"
toml = "0.8"
rayon = "1"
tera = "1"
