[package]
name = "xpd-rank-card"
version = "0.6.0"
edition = "2021"
license = "EUPL-1.2"
description = "A library for experienced and minixpd to render SVGs"
repository = "https://github.com/randomairborne/experienced"
readme = "README.md"
keywords = ["svg"]
categories = ["multimedia::images"]

[dependencies]
# tokio
tokio = { version = "1", features = ["sync"] }

# image formats
resvg = "0.44"
png = "0.17"

# error handling
tracing = "0.1"
thiserror = "2"

# serde
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tera = "1"

# misc
rayon = "1"

[dev-dependencies]
tokio = { version = "1", features = ["fs"] }
rmp-serde = "1"