[package]
name = "xpd-setcommands"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

xpd-slash-defs = { workspace = true }
xpd-common = { workspace = true }
tracing-subscriber = "0.3"

twilight-http = { version = "0.16", features = ["hickory", "rustls-native-roots", "rustls-aws_lc_rs"] }
twilight-model = "0.16"

valk-utils = "0.1"