[package]
name = "xpd-setcommands"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

xpd-slash-defs = { workspace = true }
xpd-common = { workspace = true }
tracing-subscriber = "0.3"


twilight-http = { version = "0.17", features = ["hickory", "rustls-native-roots"] }
twilight-model = "0.17"
rustls = "0.23"

valk-utils = "0.1"