[package]
name = "xpd-slash"
version = "0.1.0"
edition = "2021"
description = "A slash command handler for experienced"
repository = "https://github.com/randomairborne/experienced"
license = "EUPL-1.2"
categories = ["games"]
keywords = ["discord-bot", "mee6"]

# SO MANY DEPENDENCIES

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls-native-roots"], default-features = false }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "macros"] }
twilight-http = { version = "0.15", features = ["rustls-native-roots"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
deadpool-redis = { version = "0.14", features = ["rt_tokio_1"] }
xpd-rank-card = { path = "../xpd-rank-card", version = "0.5" }
redis = { version = "0.24", features = ["aio", "tokio-comp"] }
twilight-util = { version = "0.15", features = ["builder"] }
xpd-common = { path = "../xpd-common", version = "0.0.6" }
serde = { version = "1", features = ["derive"] }
twilight-interactions = "0.15"
twilight-validate = "0.15"
twilight-model = "0.15"
parking_lot = "0.12.1"
tracing = "0.1"
base64 = "0.21"
thiserror = "1"
mee6 = "0.1"
csv = "1"


[dev-dependencies]
rand = "0.8"
cargo_metadata = "0.18"
