[package]
name = "xpd-slash"
version = "0.1.0"
edition = "2021"
description = "A slash command handler for experienced"
repository = "https://github.com/randomairborne/experienced"
license = "EUPL-1.2"
categories = ["games"]
keywords = ["discord-bot", "mee6"]

# SO MANY DEPENDENCIES

[dependencies]
# twilight
twilight-http = { version = "0.16.0", features = ["rustls-native-roots"], default-features = false }
twilight-cache-inmemory = { version = "0.16.0", features = ["permission-calculator"] }
twilight-gateway = { version = "0.16.0", default-features = false }
twilight-util = { version = "0.16.0", features = ["builder"] }
twilight-interactions = "0.16.0"
twilight-model = "0.16.0"

# tokio
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }

# http
reqwest = { version = "0.12", features = ["json", "rustls-tls-native-roots", "stream"], default-features = false }
http-body-util = "0.1"

# internal crates
simpleinterpolation = { workspace = true }
xpd-slash-defs = { workspace = true }
xpd-rank-card = { workspace = true }
xpd-database = { workspace = true }
xpd-common = { workspace = true }
xpd-util = { workspace = true }
mee6 = "0.1"

# data formats
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
csv = "1"

# sqlx
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "macros"] }

# error handling
thiserror = "2"
tracing = "0.1"