[package]
name = "xpd-web"
version = "0.1.0"
edition = "2021"
description = "A web dashboard for experienced"
repository = "https://github.com/randomairborne/experienced"
readme = "README.txt"
license = "MS-PL"
categories = ["games"]
keywords = ["discord-bot", "mee6"]

[dependencies]
axum = { version = "0.6", features = ["tokio", "macros", "http2", "query"], default-features = false }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "macros", "offline"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
twilight-model = { version = "0.15", default-features = false }
xpd-common = { path = "../xpd-common/", version = "0.0.4" }
redis = { version = "0.23", features = ["aio"] }
serde = { version = "1", features = ["derive"] }
deadpool-redis = "0.12"
serde_json = "1"
dotenvy = "0.15"
thiserror = "1"
mee6 = "0.1"
tera = "1"
