[package]
name = "xpd-web"
version = "0.1.0"
edition = "2021"
description = "A web dashboard for experienced"
repository = "https://github.com/randomairborne/experienced"
readme = "README.txt"
license = "EUPL"
categories = ["games"]
keywords = ["discord-bot", "mee6"]

[dependencies]
axum = { version = "0.7", features = ["tokio", "macros", "http1", "http2", "query"], default-features = false }
tower-http = { version = "0.4.4", default-features = false, features = ["fs", "compression-full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
twilight-model = { version = "0.15", default-features = false }
axum-extra = { version = "0.8.0", default-features = false }
xpd-common = { path = "../xpd-common", version = "0.0.6" }
redis = { version = "0.23", features = ["aio"] }
serde = { version = "1", features = ["derive"] }
deadpool-redis = "0.13"
serde_json = "1"
dotenvy = "0.15"
thiserror = "1"
tracing = "0.1"
mee6 = "0.1"
tera = "1"